--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,41 +1,28 @@
-name: pytest
+on: [push, pull_request]
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-permissions:
-  contents: read
+name: Run tests
 
 jobs:
-  build:
-
+  deploy:
+    name: Deploy
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v3
+    - name: Checkout
+      uses: actions/checkout@v2
       with:
-        python-version: "3.9"
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install -r tests/requirements.txt
-        pip install codecov
-    - name: Test with pytest
-      run: |
-        python -m pytest --cov-report xml --cov=app --cov=poll --cov=formatters --cov=mattermost_api
+        submodules: recursive
 
-    - name: Codecov Report
-      uses: codecov/codecov-action@v3
+    - name: setup python
+      uses: actions/setup-python@v2
       with:
-        token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
-        files: ./coverage.xml
-        env_vars: OS,PYTHON
-        flags: unittests
-        fail_ci_if_error: true
-        verbose: true
+        python-version: '3.9'
+
+    - name: install packages
+      run: |
+        pip install virtualenv --upgrade
+        pip install -r requirements.txt
+        pip install -r requirements-dev.txt
+
+    - name: Run tests
+      run: ./test.sh && codecov
