--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,6 @@
-include isocor/data/*
+include requirements*.txt
+
+include README.md
+include LICENSE.md
+include setup.py
+include s2cloudless/models/*
