--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,12 +1,45 @@
-name: Lint
+name: Build, test and publish Python 🐍 distributions 📦 to PyPI
 
-on: [push, pull_request, workflow_dispatch]
-
+on: push
 jobs:
-  lint:
+  build-and-publish:
+    name: Build, test and publish Python 🐍 distributions 📦 to PyPI
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v2.3.4
-      - uses: actions/setup-python@v2.2.2
-      - uses: pre-commit/action@v2.0.3
+      - name: Check out repository code
+        uses: actions/checkout@v2
+
+      # Setup Python (faster than using Python container)
+      - name: Setup Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.x"
+
+      - name: Install pipenv
+        run: |
+          python -m pip install --upgrade pipenv wheel
+      - id: cache-pipenv
+        uses: actions/cache@v4
+        with:
+          path: ~/.local/share/virtualenvs
+          key: ${{ runner.os }}-pipenv-${{ hashFiles('**/Pipfile.lock') }}
+
+      - name: Install dependencies
+        if: steps.cache-pipenv.outputs.cache-hit != 'true'
+        run: |
+          pipenv install --deploy --dev
+
+      - name: Run tests with pytest
+        run: pipenv run coverage run --source pathfinding -m pytest 
+
+      - name: Show basic test coverage report
+        run: pipenv run coverage report
+
+      - name: Build a binary wheel and a source tarball
+        run: |
+          pipenv run pip wheel --wheel-dir=./dist .
+
+      - name: Publish distribution 📦 to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1.8
+        with:
+          password: ${{ secrets.PYPI_API_TOKEN }}
