--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+.tox
+.idea
+.coverage
+.pypirc
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -13,7 +19,6 @@ develop-eggs/
 dist/
 downloads/
 eggs/
-.eggs/
 lib/
 lib64/
 parts/
@@ -37,11 +42,9 @@ pip-delete-this-directory.txt
 htmlcov/
 .tox/
 .coverage
-.coverage.*
 .cache
 nosetests.xml
 coverage.xml
-*,cover
 
 # Translations
 *.mo
@@ -55,3 +58,6 @@ docs/_build/
 
 # PyBuilder
 target/
+
+# ipython notebook
+.ipynb_checkpoints
