--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,43 @@
-# python
+*.py[cod]
+
+# C extensions
+*.so
+
+# Packages
+*.egg
+*.egg-info
+dist
+build
+eggs
+parts
+bin
+var
+sdist
+develop-eggs
+.installed.cfg
+lib
+lib64
 __pycache__
-.eggs/
 
-# Trying stuff
-MorphopsStuff.ipynb
-trying_stuff
+# Installer logs
+pip-log.txt
 
-# Editors
-.vscode
-.idea/
-
-# Nb
-.ipynb_checkpoints
-
-# Compiled python modules.
-*.pyc
-
-# Setuptools distribution folder.
-/dist/
-/build/
-
-# Python egg metadata, regenerated from source files by setuptools.
-/*.egg-info
-
-# Sphinx
-docs/build
-
-# Tox
-.tox
-
-# pytest
+# Unit test / coverage reports
 .coverage
+.tox
+nosetests.xml
+
+# Translations
+*.mo
+
+# Mr Developer
+.mr.developer.cfg
+.project
+.pydevproject
+
+# autosaves
+*.py~
+*.yml~
+*.rst~
+*.txt~
+*.toml~
