--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,9 @@
-include README.rst
-include LICENSE
+include *.cfg
+include *.toml
+include *.txt
+include *.rst
+include *.py
+recursive-include tests *.py *.m *.jl
+recursive-include examples *.py *.txt *.rst *.cfg
+recursive-include doc *
+prune doc/build
