rkrahl/pytest-dependency/action

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,15 @@
-tags
-*.py[co]
-MANIFEST
-dist/*
-agithub.egg-info/
-build/
-dist/
-.tox
-.eggs
+*.pyc
+*~
+.cache/
+__pycache__/
+/.version
+/MANIFEST
+/build/
+/dist/
+/doc/doctest/
+/doc/doctrees/
+/doc/html/
+/doc/latex/
+/doc/linkcheck/
+/pytest_dependency.egg-info/
+/python2_6.patch
