--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,7 @@
-*.pyc
-*~
-.cache/
-__pycache__/
-/.version
-/MANIFEST
-/build/
-/dist/
-/doc/doctest/
-/doc/doctrees/
-/doc/html/
-/doc/latex/
-/doc/linkcheck/
-/pytest_dependency.egg-info/
-/python2_6.patch
+# Python
+__pycache__
+*.py[co]
+
+# Code coverage settings and reports
+/.coverage
+/coverage
