--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,4 @@
-# Python
-__pycache__
-*.py[co]
-
-# Code coverage settings and reports
-/.coverage
-/coverage
+*.pyc
+*.swp
+db.sqlite3
+vagrant/.vagrant/
