--- a/Pipfile
+++ b/Pipfile
@@ -3,10 +3,11 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
 
-[packages]
-requests = "*"
-nose = "*"
-pyyaml = "*"
-
 [dev-packages]
-"autopep8" = "*"
+cookiecutter = "*"
+pytest = "*"
+tox = "*"
+flake8 = "*"
+
+[requires]
+python_version = "3.7"
