--- a/tox.ini
+++ b/tox.ini
@@ -1,2 +1,17 @@
+# For more information about tox, see https://tox.readthedocs.io/en/latest/
+[tox]
+envlist = py36, py37, py38, py39, py310, flake8
+
+[testenv]
+passenv =
+    FORCE_COLOR
+commands = pytest tests --verbose
+deps = pytest>=3.0
+
+[testenv:flake8]
+basepython = python
+deps = flake8
+commands = flake8
+
 [flake8]
-ignore = E501
+max-line-length = 120
