--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,4 @@
-include LICENSE
-include README.rst
-recursive-include docs *
+include COPYING
+include README.md
+include setconf.1
+include setconf.py
