nmigen/nmigen-soc/action

--- a/.coveragerc
+++ b/.coveragerc
@@ -1,2 +1,13 @@
 [run]
-relative_files = True
+branch = True
+include =
+  nmigen_soc/*
+omit =
+  nmigen_soc/test/*
+  */__init__.py
+
+[report]
+exclude_lines =
+  :nocov:
+partial_branches =
+  :nobr:
