mammothb/symspellpy/action

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,2 @@
-include versioneer.py
-include sqlalchemy_exasol/_version.py
-include README.rst
+include symspellpy/frequency_dictionary_en_82_765.txt
+include symspellpy/frequency_bigramdictionary_en_243_342.txt
