--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,10 @@
-# Tox (http://tox.testrun.org/) is a tool for running tests
-# in multiple virtualenvs. This configuration file will run the
-# test suite on all supported python versions. To use it, "pip install tox"
-# and then run "tox" from this directory.
-
 [tox]
-envlist = py{27,35,36,37,38,39,py,py3}
+envlist = py37, py38, py39, py310, py311
 
-[testenv]
-commands = pytest
-deps =
-    .[test]
-passenv =
-    ASTTOKENS_SLOW_TESTS
+[gh-actions]
+python =
+    3.7: py37
+    3.8: py38
+    3.9: py39
+    3.10: py310
+    3.11: py311
