--- a/.coveragerc
+++ b/.coveragerc
@@ -1,2 +1,13 @@
 [run]
-source = georss_ingv_centro_nazionale_terremoti_client
+branch = True
+source = psrqpy
+
+[report]
+exclude_lines =
+    if self.debug:
+    pragma: no cover
+    raise NotImplementedError
+    if __name__ == .__main__.:
+ignore_errors = True
+omit =
+    tests/*
