--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,10 @@
-[tool.black]
-target-version = ['py37', 'py38', 'py39', 'py310']
+[build-system]
+requires = [
+    "setuptools>=45",
+    "setuptools_scm>=6.2",
+    "wheel",
+]
+build-backend = "setuptools.build_meta"
 
-[tool.isort]
-profile = "black"
-src_paths = ["georss_ingv_centro_nazionale_terremoti_client", "tests"]
+[tool.setuptools_scm]
+write_to = "psrqpy/_version.py"
