verybadsoldier/backtrader_plotting/action

--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,9 @@
-*.py[cod]
-*.swp
-
-# C extensions
-*.so
-
-# Packages
-*.egg
-*.egg-info
-dist
-build
-eggs
-parts
-bin
-var
-sdist
-develop-eggs
-.installed.cfg
-lib
-lib64
 __pycache__
-
-# Installer logs
-pip-log.txt
-
-# Unit test / coverage reports
-.coverage
-htmlcov
-.tox
-nosetests.xml
-
-# Translations
-*.mo
-
-# Mr Developer
-.mr.developer.cfg
-.project
-.pydevproject
-.ropeproject
-
-dynamo3_env
-*.db
-*.log
+backtrader_plotting.egg-info
+/build
+/dist
+/tests/.pytest_cache
+/.idea
+/.pytest_cache
+/.tox
+/venv
