--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,30 +1,54 @@
-name: Python application
-
-on: [push]
-
+name: hk0weather
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+  schedule:
+    - cron: '5 19 1 * *'
 jobs:
-  build:
-
+  hk0weather-tests:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v1
-      with:
-        python-version: 3.9
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    - name: Lint with flake8
-      run: |
-        pip install flake8
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
-      run: |
-        pip install pytest
-        pytest
+      - uses: actions/checkout@v3
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.9"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install flake8 coverage
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: Lint with flake8
+        run: |
+          # stop the build if there are Python syntax errors or undefined names
+          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+      - name: List available scrapers
+        run: |
+          coverage run -a -m scrapy list
+        working-directory: hk0weather
+      - name: Test a scraper of regional weather
+        run: |
+          coverage run -a -m scrapy crawl regional -o regional.csv
+        working-directory: hk0weather
+      - name: Test a scraper of daily weather forecast
+        run: |
+          coverage run -a -m scrapy crawl hkoforecast -o hkoforecast.csv
+        working-directory: hk0weather
+      - name: Test a scraper of 9-day weather forecast
+        run: |
+          coverage run -a -m scrapy crawl hko9dayforecast -o hko9dayforecast.csv
+        working-directory: hk0weather
+      - name: Generate coverage json report
+        run: |
+          coverage json
+        working-directory: hk0weather
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        with:
+          directory: hk0weather
