--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,64 @@
-*.pyc
-*.db
-*~
-.*
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
 
-/site/
-/htmlcov/
-/coverage/
-/build/
-/dist/
-/*.egg-info/
-/env/
-/venv/
-MANIFEST
-coverage.*
-docs/_build
+# C extensions
+*.so
 
-!.gitignore
-!.travis.yml
-!.editorconfig
-!.github
-!.codecov.yml
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+.pytest_cache/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# User-defined
+.vscode/
+data/
+export/
