--- a/.editorconfig
+++ b/.editorconfig
@@ -1,18 +1,17 @@
-# Top-most EditorConfig file
+# http://editorconfig.org
+
 root = true
 
-# Unix-style newlines with a newline ending every file
 [*]
-end_of_line = lf
+indent_style = space
+indent_size = 4
 insert_final_newline = true
+trim_trailing_whitespace = true
+end_of_line = lf
 charset = utf-8
 
-# Four-space indentation
 [*.py]
-indent_size = 4
-indent_style = space
+max_line_length = 79
 
-# Two-space indentation
-[*.json]
-indent_size = 2
-indent_style = space
+[*.md]
+insert_final_newline = false
