--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
+\.vs/
+__pycache__/
 *.pyc
-*.tmproj
-*.DS_Store
-dist
-NOTES
-MANIFEST
+*.log
+ApplyPEP8\.bat
+custom_mappings.yaml
+failed_matches\.txt
+logo\.psd
+settings\.ini
+update_anilist\.bat
+update_anilist_test\.bat
