--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,18 @@
-\.vs/
-__pycache__/
+*.swp
 *.pyc
-*.log
-ApplyPEP8\.bat
-custom_mappings.yaml
-failed_matches\.txt
-logo\.psd
-settings\.ini
-update_anilist\.bat
-update_anilist_test\.bat
+*.pyo
+
+*.rpy
+*.rpyc
+!un.rpyc
+*.txt
+
+/renpy
+/build
+/dist
+/tests
+/*.egg-info
+
+/bintray.json
+
+unrpyc.sublime-*
