--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,5 @@
-*.swp
 *.pyc
-*.pyo
-
-*.rpy
-*.rpyc
-!un.rpyc
-*.txt
-
-/renpy
-/build
-/dist
-/tests
-/*.egg-info
-
-/bintray.json
-
-unrpyc.sublime-*
+profiles/*.pyc
+*~
+*.log
+*.pcap
