--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,37 +1,19 @@
-name: flake8
-
-on: [push]
-
+name: Trigger docs build
+on:
+  push:
+  schedule:
+    - cron: "0 0 * * 1"
+  workflow_dispatch:
 jobs:
-  build:
+  trigger:
+    name: Trigger webhook
     runs-on: ubuntu-latest
+    env:
+      readthedocs_token: ${{ secrets.readthedocs_token }}
     steps:
-    - uses: actions/checkout@v1
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v1
-      with:
-        python-version: 3.9
-    - name: Setup Miniconda
-      uses: goanpeca/setup-miniconda@v1.0.2
-      with:
-        miniconda-version: 'latest'
-        activate-environment: gs-flake8
-        python-version: 3.9
-        auto-update-conda: true
-    - name: Config Channels
-      shell: pwsh
-      run: |
-        conda config --set always_yes yes
-        conda config --add channels conda-forge
-    - name: Install dependencies
-      shell: pwsh
-      run: |
-        conda install black flake8 flake8-builtins flake8-black flake8-bugbear flake8-comprehensions flake8-isort isort --yes
-    - name: Conda info
-      shell: pwsh
-      run: |
-        conda info -a
-        conda list
-    - name: Run flake8
-      shell: pwsh
-      run: flake8 . --statistics
+      - if: ${{ env.readthedocs_token != '' }}
+        run: |
+          curl -s -X POST \
+            -d "branches=${{ github.ref_name }}" \
+            -d "token=${{ env.readthedocs_token }}" \
+            https://readthedocs.org/api/v2/webhook/nethserver-devel/49560/
