jwodder/inplace/action

--- a/tox.ini
+++ b/tox.ini
@@ -1,43 +1,60 @@
 [tox]
-envlist =
-    py27-{dj18,dj19,dj110,dj111}-{sqlite,postgres},
-    py36-{dj18,dj19,dj110,dj111,dj20,dj21,dj22,dj30,dj31,dj32}-{sqlite,postgres},
-    py37-{dj20,dj21,dj22,dj30,dj31,dj32}-{sqlite,postgres},
-    py38-{dj22,dj30,dj31,dj32}-{sqlite,postgres},
-    py39-{dj22,dj30,dj31,dj32}-{sqlite,postgres},
-    py310-{dj32}-{sqlite,postgres},
-
-[gh-actions]
-python =
-    2.7: py27
-    3.6: py36
-    3.7: py37
-    3.8: py38
-    3.9: py39
-    3.10: py310
+envlist = py36,py37,py38,py39,pypy3
+skip_missing_interpreters = True
+isolated_build = True
+minversion = 3.3.0
 
 [testenv]
-passenv = CI GITHUB_WORKFLOW
+setenv = LC_ALL=en_US.UTF-8
 deps =
-    dj18: Django == 1.8.*
-    dj19: Django == 1.9.*
-    dj110: Django == 1.10.*
-    dj111: Django == 1.11.*
-    dj20: Django == 2.0.*
-    dj21: Django == 2.1.*
-    dj22: Django == 2.2.*
-    dj30: Django == 3.0.*
-    dj31: Django == 3.1.*
-    dj32: Django == 3.2.*
-    # mysql: mysqlclient
-    postgres: psycopg2-binary
-    coverage
-    codecov
-setenv =
-    sqlite: DATABASE_ENGINE=sqlite
-    # mysql: DATABASE_ENGINE=mysql
-    postgres: DATABASE_ENGINE=postgres
+    flake8~=3.7
+    flake8-bugbear
+    flake8-builtins~=1.4
+    flake8-import-order-jwodder
+    pytest~=6.0
+    pytest-cov~=2.0
 commands =
-    coverage run --append --source=extra_settings setup.py test
-    coverage report -m
-    codecov
+    flake8 --config=tox.ini src test
+    pytest {posargs} test
+
+[pytest]
+addopts = --cov=in_place --no-cov-on-fail
+filterwarnings = error
+
+[coverage:run]
+branch = True
+parallel = True
+
+[coverage:paths]
+source =
+    src
+    .tox/*/site-packages
+
+[coverage:report]
+precision = 2
+show_missing = True
+
+[flake8]
+application-import-names = in_place,test_in_place_util
+doctests = True
+exclude = .*/,build/,dist/,venv/
+hang-closing = False
+import-order-style = jwodder
+max-doc-length = 80
+max-line-length = 80
+select = C,B,B902,B950,E,E242,F,I,W
+
+ignore =
+    B005,
+    E116, E121, E122, E126, E127, E128, E131, E133,
+    E221, E222, E225, E226, E227, E228, E231, E241, E251, E262, E265, E266,
+    E271, E272,
+    E302, E305, E306,
+    E402,
+    E501,
+    E721,
+    I201,
+    W503,
+
+per-file-ignores =
+    test/*.py:B011
