--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
-include LICENSE.txt
-include README.md
-recursive-include extra_settings *
-recursive-exclude * *.pyc __pycache__ .DS_Store
+include CHANGELOG.* CONTRIBUTORS.* LICENSE tox.ini
+graft docs
+prune docs/_build
+graft test
+global-exclude *.py[cod]
