--- a/.coveragerc
+++ b/.coveragerc
@@ -1,30 +1,15 @@
 [run]
-source = salem
-omit = */sandbox.py/*
+source =
+       incremental
+branch = True
 
-concurrency = multiprocessing
+[paths]
+source =
+   src/
+   .tox/*/lib/python*/site-packages/
+   .tox/pypy*/site-packages/
 
 [report]
-omit = */sandbox.py/*
-# Regexes for lines to exclude from consideration
 exclude_lines =
     pragma: no cover
-    coverage: no cover
-
-    # Don't complain about missing debug-only code:
-    def __repr__
-    def __str__
-
-    # Don't complain if tests don't hit defensive assertion code:
-    raise AssertionError
-    raise NotImplementedError
-
-    # Don't complain if non-runnable code isn't run:
-    except ImportError
-    if 0:
-    if __name__ == .__main__.:
-
-ignore_errors = True
-
-[html]
-directory = coverage_html_report
+    if TYPE_CHECKING:
