dabapps/django-zen-queries/action

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,11 @@
-*.egg-info/
-*.o
-*.py[co]
-*.so
-_trial_temp*/
-build/
-dropin.cache
-doc/
-docs/_build/
-dist/
-venv/
-htmlcov/
+*.pyc
+*.db
 .coverage
-.coverage.*
-*~
-*.lock
-apidocs/
+MANIFEST
+dist/
+build/
+env/
+html/
+htmlcov/
+*.egg-info/
 .tox/
-.DS_Store
-coverage.xml
