--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,53 @@
-*.7z
+*$py.class
+*,cover
+*.egg
+*.egg-info/
+*.log
+*.manifest
+*.mo
+*.pot
+*.py[cod]
 *.so
-*.whl
-*.pyc
-**/*.idea/*
-*/*.wm-hell*
-public-apis/
-*/docs/wm-*
-*/*/build-*.txt
-build-*.txt
-**/*wm-shell*
-*/*/*.egg-info/
-**/*.egg-info/
-**/build/
-**/dist/
-
-sink_service/build/
-python_transport/docs/source/api/*
-
-public/
-packets/
-release/
-
-.pre-commit-config.yaml
-.flake8
-.clang*
-.ci/manifest/*
-.ci/_repo/*
-.pylintrc
-dev-requirements.txt
-
-.repo/*
-_repo/*
-python_transport/docs/source/api/
-container/wm_gateway.env
-container/common/wm_transport_service.yml
-tests/services/wait-for-it/*
-**/*.private*
-.ci/_repo*
-sink_service.log
+*.spec
+.cache
+.coverage
+.coverage.*
+.eggs/
+.env
+.hypothesis/
+.idea
+.installed.cfg
+.ipynb_checkpoints
+.Python
+.python-version
+.ropeproject
+.scrapy
+.spyderproject
+.tox/
+.venv/
+.webassets-cache
+__pycache__/
+build/
+celerybeat-schedule
+coverage.xml
+develop-eggs/
+dist/
+docs/_build/
+downloads/
+eggs/
+env/
+ENV/
+htmlcov/
+instance/
+lib/
+lib64/
+local_settings.py
+nosetests.xml
+parts/
+pip-delete-this-directory.txt
+pip-log.txt
+sdist/
+target/
+var/
+venv/
+wheels/
