--- a/.gitignore
+++ b/.gitignore
@@ -1,53 +1,8 @@
-*$py.class
-*,cover
-*.egg
-*.egg-info/
-*.log
-*.manifest
-*.mo
-*.pot
-*.py[cod]
-*.so
-*.spec
-.cache
-.coverage
-.coverage.*
-.eggs/
-.env
-.hypothesis/
-.idea
-.installed.cfg
-.ipynb_checkpoints
-.Python
-.python-version
-.ropeproject
-.scrapy
-.spyderproject
-.tox/
-.venv/
-.webassets-cache
-__pycache__/
-build/
-celerybeat-schedule
-coverage.xml
-develop-eggs/
+*.pyc
+*.egg-info
 dist/
-docs/_build/
-downloads/
-eggs/
+.DS_Store
+.mypy_cache
+.coverage
 env/
-ENV/
-htmlcov/
-instance/
-lib/
-lib64/
-local_settings.py
-nosetests.xml
-parts/
-pip-delete-this-directory.txt
-pip-log.txt
-sdist/
-target/
-var/
-venv/
-wheels/
+build/
