mgaitan/sphinxcontrib-mermaid/action

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,8 +1,5 @@
-include README.md
-include LICENSE.txt
-include CHANGELOG.md
-include requirements.txt
-include peekaboo.conf.sample
-include ruleset.conf.sample
-include systemd/peekaboo.service
-graft peekaboo/locale
+include README.rst
+include CHANGELOG.rst
+include LICENSE.rst
+global-exclude *.pyc
+exclude .gitignore
