jupyterhub/batchspawner/action

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,8 @@
+*.egg-info/
+*.log
 *.pyc
-test.py
-.pytest_cache
-*__pycache__
+__pycache__/
+.cache/
 .coverage
-*.ipynb
-.ipynb_checkpoints
-.tox
-*.egg-info
-tox.ini
-/.cache
-/.vscode
-.eggs
-*.code-workspace
-
-venv
+.pytest_cache
+*~
