--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-async_generator>=1.8
-jinja2
-jupyterhub>=0.5
+log_symbols>=0.0.14
+spinners>=0.0.24
+termcolor>=1.1.0
+colorama>=0.3.9
+six>=1.12.0
