--- a/.editorconfig
+++ b/.editorconfig
@@ -1,17 +1,19 @@
-# EditorConfig (http://editorconfig.org)
-
+# http://editorconfig.org
 root = true
 
 [*]
 charset = utf-8
 end_of_line = lf
+indent_size = 4
+indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
-indent_style = space
-indent_size = 4
-
-[*.{json,yml}]
-indent_size = 2
 
 [*.md]
 trim_trailing_whitespace = false
+
+[*.py]
+max_line_length = 99
+
+[*.yml]
+indent_size = 2
