--- a/.editorconfig
+++ b/.editorconfig
@@ -1,19 +1,27 @@
-# http://editorconfig.org
 root = true
 
 [*]
 charset = utf-8
 end_of_line = lf
-indent_size = 4
 indent_style = space
-insert_final_newline = true
+indent_size = 4
 trim_trailing_whitespace = true
-
-[*.md]
-trim_trailing_whitespace = false
+insert_final_newline = true
 
 [*.py]
-max_line_length = 99
+max_line_length = 120
 
-[*.yml]
+[{Main.sublime-menu,Default.sublime-commands}]
+indent_style = tab
+
+[*.{json,yml}]
 indent_size = 2
+
+[*.cmd]
+end_of_line = crlf
+
+[appveyor.yml]
+end_of_line = crlf
+
+[*.{md,txt}]
+trim_trailing_whitespace = false
