iamdefinitelyahuman/py-solc-x/action

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,31 +1,97 @@
-name: ci
+on: ["push", "pull_request"]
 
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+name: py-solc-x workflow
 
 jobs:
-  ci:
+
+  lint:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Git repository
-        uses: actions/checkout@v2
+    - uses: actions/checkout@v1
 
-      - name: Setup Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.9
+    - name: Setup Python 3.6
+      uses: actions/setup-python@v1
+      with:
+        python-version: 3.9
 
-      - name: Install Python dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+    - name: Install Tox
+      run: pip install tox
 
-      - name: Run flake8
-        run: flake8 . --count --show-source --statistics
+    - name: Run Tox
+      run: tox -e lint
 
-      - name: Run pytest
-        run: pytest
+
+  py36:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v1
+    
+    - name: Setup Python 3.6
+      uses: actions/setup-python@v1
+      with:
+        python-version: 3.9
+    
+    - name: Install Tox
+      run: pip install tox
+
+    - name: Run Tox
+      run: tox -e py36
+
+    - name: Upload coverage to Codecov  
+      uses: codecov/codecov-action@v1
+      with:
+        file: ./coverage.xml
+        fail_ci_if_error: true
+
+
+  py37:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v1
+    
+    - name: Setup Python 3.7
+      uses: actions/setup-python@v1
+      with:
+        python-version: 3.9
+    
+    - name: Install Tox
+      run: pip install tox
+
+    - name: Run Tox
+      run: tox -e py37
+
+    - name: Upload coverage to Codecov  
+      uses: codecov/codecov-action@v1
+      with:
+        file: ./coverage.xml
+        fail_ci_if_error: true
+
+
+  py38:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest]
+
+    steps:
+    - uses: actions/checkout@v1
+    
+    - name: Setup Python 3.8
+      uses: actions/setup-python@v1
+      with:
+        python-version: 3.9
+    
+    - name: Install Tox
+      run: pip install tox
+
+    - name: Run Tox
+      run: tox -e py38
+
+    - name: Upload coverage to Codecov  
+      uses: codecov/codecov-action@v1
+      with:
+        file: ./coverage.xml
+        fail_ci_if_error: true
