--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,67 @@
-.DS_Store
-*.py[co]
+*.py[cod]
+
+# Binaries
+bin
+solcx/temp
+
+# C extensions
+*.so
+
+# Packages
+*.eggs
+*.egg-info
+dist
+build
+eggs
+parts
+var
+sdist
+develop-eggs
+.installed.cfg
+lib
+lib64
+venv
+env
+
+# Installer logs
+pip-log.txt
+
+# Unit test / coverage reports
+.coverage
+.tox
+coverage.xml
+nosetests.xml
+
+# Translations
+*.mo
+
+# Mr Developer
+.mr.developer.cfg
+.project
+.pydevproject
+
+# Complexity
+output/*.html
+output/*/index.html
+
+# Sphinx
+docs/_build
+
+# Blockchain
+**/chains/*/nodes/*
+**/chains/*/nodekey
+**/chains/*/dapp/*
+**/chains/*/chaindata/*
+
+# Known Contracts
+**/known_contracts.json
+
+# py.test cache
 .cache
-__pycache__
-*.html
-/tmp/
-.idea/
-.scannerwork/
-.env
-.pytest_cache/
+
+# npm
+node_modules
+
+# other
+.vscode
+.idea
