--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,15 @@
-beautifulsoup4
-requests>=2.0.0,<3.0.0
+docutils; sys_platform == "win32"
+pygments; sys_platform == "win32"
+pypiwin32; sys_platform == "win32"
+kivy_deps.sdl2; sys_platform == "win32"
+kivy_deps.glew; sys_platform == "win32"
+kivy
+kivy-garden
+
+contextvars; python_version < "3.7"
+Babel
+numpy
+Pillow
+
+--pre
+--extra-index-url https://kivy.org/downloads/simple/
