--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,31 +1,51 @@
-name: ci
+---
 
-on: [push, pull_request]
+name: CI/CD
+on:
+  push:
+    branches:
+      - main
+  pull_request: {}
+
+env:
+  PYTHON_VERSION: 3.8
 
 jobs:
-  build:
+  cicd:
+    name: Test and deploy
     runs-on: ubuntu-latest
     steps:
-      # Checkout Repository
-      - name: Checkout
+      - name: Clone the source code
         uses: actions/checkout@v2
 
-      # Install Tools
-      - name: Install Tools
-        run: |
-          sudo apt-get install wget build-essential python3
-          pip3 install setuptools
+      - name: Setup Python ${{ env.PYTHON_VERSION }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
 
-      # Install (n)Migen / LiteX / Cores
-      - name: Install LiteX
-        run: |
-          wget https://raw.githubusercontent.com/enjoy-digital/litex/main/litex_setup.py
-          python3 litex_setup.py init install --user
+      - name: Install flake8
+        run: pip install flake8
 
-      # Install Project
-      - name: Install Project
-        run: python3 setup.py develop --user
+      - name: Ensure the code passes lints
+        run: flake8 homu/
 
-      # Test
-      - name: Run Tests
+      - name: Install homu on the builder
+        run: pip install -e .
+
+      - name: Run the test suite
         run: python3 setup.py test
+
+      - name: Build the Docker image
+        run: docker build -t homu .
+
+      - name: Upload the Docker image to AWS ECR
+        uses: rust-lang/simpleinfra/github-actions/upload-docker-image@main
+        with:
+          image: homu
+          repository: bors
+          region: us-west-1
+          redeploy_ecs_cluster: rust-ecs-prod
+          redeploy_ecs_service: bors
+          aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        if: github.event_name == 'push' && github.repository == 'rust-lang/homu' && github.ref == 'refs/heads/main'
