ray-project/tune-sklearn/action

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,9 @@
-venv
+__pycache__/
+build
+dist
+
+.vscode
 .DS_Store
-*.sublime-*
-dist/
-build/
-*.egg-info/
-*.pyc
-.coverage
-.noseids
-.vscode/
-.tox
-\.eggs/
-.idea
+*.egg-info
+MANIFEST
+
