--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,18 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
-*$py.class
 
 # C extensions
 *.so
 
 # Distribution / packaging
 .Python
-.mypy_cache/
-.venv/
 env/
-venv/
 build/
 develop-eggs/
 dist/
 downloads/
+eggs/
 eggs/
 .eggs/
 lib/
@@ -30,6 +27,7 @@ var/
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
+MANIFEST
 *.manifest
 *.spec
 
@@ -41,12 +39,10 @@ pip-delete-this-directory.txt
 htmlcov/
 .tox/
 .coverage
-.coverage.*
 .cache
+.pytest_cache/
 nosetests.xml
 coverage.xml
-*,cover
-.hypothesis/
 
 # Translations
 *.mo
@@ -55,14 +51,18 @@ coverage.xml
 # Django stuff:
 *.log
 
+# Eclipse
+.project
+.pydevproject
+.settings/
+
 # Sphinx documentation
-docs/_build/
+doc/_build/
 
 # PyBuilder
 target/
+.ropeproject
+*~
 
-#Ipython Notebook
-.ipynb_checkpoints
-
-.vscode/
-.vs/
+# OSX
+.DS_Store
