etesync/etesync-dav/action

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,17 @@
-data/
-.coverage
-build
-dist
+Session.vim
+/.venv
+/.coverage
+/etesync.db
+
+/dist
+
+/pyinstaller/etesync-dav.spec
+/pyinstaller/build
+/pyinstaller/dist
+/pyinstaller/.venv
+
+/old
+
 __pycache__
+*.egg-info
+.*.swp
