--- a/setup.cfg
+++ b/setup.cfg
@@ -1,69 +1,82 @@
+# SPDX-FileCopyrightText: © 2019 The usbmon-tools Authors
+# SPDX-License-Identifier: Apache-2.0
+
 [metadata]
-name = pypi-simple
-version = attr:pypi_simple.__version__
-description = PyPI Simple Repository API client library
-long_description = file:README.rst
-long_description_content_type = text/x-rst
-author = John Thorvald Wodder II
-author_email = pypi-simple@varonathe.org
-license = MIT
-license_files = LICENSE
-url = https://github.com/jwodder/pypi-simple
-
-keywords =
-    pypi
-    pep503
-    pep592
-    simple repository api
-    packages
-    pip
-
+name = usbmon-tools
+description = usbmon processing utilities (for Linux and Windows captures).
+long_description = file: README.md
+long_description_content_type = text/markdown
+author = Diego Elio Pettenò
+author_email = flameeyes@flameeyes.com
+license = Apache-2.0
+license_file = LICENSE
+license_files =
+    AUTHORS
+    CONTRIBUTING.md
+    LICENSE
+    LICENSES/*
 classifiers =
     Development Status :: 4 - Beta
-    #Development Status :: 5 - Production/Stable
+    Environment :: Console
+    Intended Audience :: Developers
+    License :: OSI Approved :: Apache Software License
+    Operating System :: OS Independent
+    Programming Language :: Python
     Programming Language :: Python :: 3
-    Programming Language :: Python :: 3 :: Only
-    Programming Language :: Python :: 3.6
-    Programming Language :: Python :: 3.7
-    Programming Language :: Python :: 3.8
-    Programming Language :: Python :: 3.9
-    Programming Language :: Python :: Implementation :: CPython
-    Programming Language :: Python :: Implementation :: PyPy
-    License :: OSI Approved :: MIT License
-    Topic :: Software Development :: Libraries :: Python Modules
-    Topic :: System :: Software Distribution
-    Topic :: Text Processing :: Markup :: HTML
-    Typing :: Typed
-
-project_urls =
-    Source Code = https://github.com/jwodder/pypi-simple
-    Bug Tracker = https://github.com/jwodder/pypi-simple/issues
-    Say Thanks! = https://saythanks.io/to/jwodder
+    Topic :: System :: Hardware
 
 [options]
-package_dir =
-    =src
 packages = find:
-include_package_data = True
-python_requires = ~=3.6
 install_requires =
-    beautifulsoup4 ~= 4.5
-    packaging >= 20
-    requests ~= 2.20
+    click
+    construct>=2.9
+    hexdump
+    python-pcapng>=1.0
+python_requires = ~= 3.7
+
+[options.extras_require]
+dev =
+    absl-py
+    mypy
+    pre-commit
+    pytest>=3.6.0
+    pytest-mypy
+    pytest-timeout>=1.3.0
+    setuptools_scm
+
+[options.package_data]
+* = py.typed
+
+[options.entry_points]
+console_scripts =
+    usbmon-capture_stats = usbmon.tools.capture_stats:main
+    usbmon-chatter_cp210x = usbmon.tools.chatter_cp210x:main
+    usbmon-chatter_cp2110 = usbmon.tools.chatter_cp2110:main
+    usbmon-chatter_hid = usbmon.tools.chatter_hid:main
+    usbmon_pcapng2base64 = usbmon.tools.pcapng2base64:main
+    usbmon-pcapng2text = usbmon.tools.pcapng2text:main
 
 [options.packages.find]
-where = src
+exclude =
+    *.tests
+    *.tests.*
+    tests.*
+    tests
 
-[mypy]
-ignore_missing_imports = True
-disallow_untyped_defs = True
-disallow_incomplete_defs = True
-no_implicit_optional = True
-warn_redundant_casts = True
-warn_return_any = True
-warn_unreachable = True
-local_partial_types = True
-no_implicit_reexport = True
-strict_equality = True
-no_error_summary = True
-show_traceback = True
+[tool:pytest]
+addopts =
+    --color=yes
+    --ignore=setup.py
+    -r a
+norecursedirs =
+    .git
+    dist
+    build
+    venv*
+    .env
+timeout = 120
+
+[flake8]
+max-line-length = 88
+# Ignore long line errors, black takes care of them.
+extend-ignore = E501
