--- a/tox.ini
+++ b/tox.ini
@@ -1,93 +1,23 @@
-# tox (https://tox.readthedocs.io/) is a tool for running tests
-# in multiple virtualenvs. This configuration file will run the
-# test suite on all supported python versions. To use it, "pip install tox"
-# and then run "tox" from this directory.
+# -*- coding: utf-8 -*-
 #
-# Note, you can also install detox ("pip install detox") to execute tox in
-# parallel.
-
-[build-system]
-requires = [ "setuptools == 40.6.3", "wheel == 0.32.3"]
+# This software may be modified and distributed under the terms
+# of the Apache License, Version 2.0 license.  See the LICENSE file for details.
 
 [tox]
-isolated_build = True
-requires = tox-conda
+skip_missing_interpreters = true
 envlist =
-    {py27,py36,py37,py38}-stable
-    black
-    check-commit
-    check-wheel-contents
-    isort
+    py36,py37,py38,py39,py310
+
+pylogbeat_modules = pylogbeat.py tests
 
 [testenv]
-conda_channels=
-    conda-forge
 deps =
-    py27: pylint==1.9.4
-    py36,py37,py38: pylint==2.3.1
-whitelist_externals =
-    /bin/bash
-    /bin/echo
-setenv =
-    TOX_INI_DIR = {toxinidir}
+    flake8
+    isort
+    mocket
+    pylint
 commands =
-    # super simple test time.
-    # pylint
-    bash -c "echo $(find . ! -name 'emoji_fzf_emojilib.py' ! -path './.*' ! -path './build/*' -name '*.py')"
-    bash -c "pylint $(find . ! -name 'emoji_fzf_emojilib.py' ! -path './.*' ! -path './build/*' -name '*.py')"
-    # confirm we can build the wheel with no errors. use env-specific working dir
-    # so we don't ruin things for our friends
-    {envpython} setup.py bdist_wheel --bdist-dir {envdir}/bdist --dist-dir {envdir}/dist
-    # test installation
-    bash -c "pip install {envdir}/dist/*.whl"
-    # very basic runtime checks
-    emoji-fzf --help
-    emoji-fzf --version
-    bash -c "emoji-fzf preview > /dev/null"
-    emoji-fzf get --name dragon
-    echo "dragon" | emoji-fzf get
-
-# black formatting required
-[testenv:black]
-deps=
-    black==19.10b0
-basepython=python3
-commands=
-    # install the package to pick up requirements
-    pip install .
-
-    # a hilarious way of extending black's default exclude list, which doesn't
-    # work through tox's quote escaping magic \o\
-    # black --check --verbose \
-    #    --exclude $({envpython} -c "import black; print('|'.join(black.DEFAULT_EXCLUDES.strip('/()').split('|') + ['\.eggs']))") \
-    #   .
-
-    # instead just manually exclude
-    black --check --verbose \
-      --exclude "\.git|\.hg|\.mypy_cache|\.nox|\.tox|\.venv|_build|buck-out|build|dist|\.eggs|emoji_fzf_emojilib.py" .
-
-# verify the commit has an emoji :D
-[testenv:check-commit]
-deps=
-    py-commit-checker==0.3.0
-basepython=python3
-commands=
-    # verify the top commit adheres to our convention
-    py-commit-checker --emojis
-
-# sanity checks on the wheel
-[testenv:check-wheel-contents]
-deps=
-    check-wheel-contents==0.1.0
-basepython=python3
-commands=
-    {envpython} setup.py bdist_wheel --bdist-dir {envdir}/bdist --dist-dir {envdir}/dist
-    bash -c "check-wheel-contents {envdir}/dist/*.whl"
-
-# verify imports are sorted properly
-[testenv:isort]
-deps=
-    isort[pyproject]==4.3.9
-basepython=python3
-commands=
-    bash -c "cd {toxinidir} && isort -c"
+    {envbindir}/python -m unittest discover --buffer --start-directory tests --pattern '*_test.py'
+    {envbindir}/flake8 {[tox]pylogbeat_modules}
+    {envbindir}/isort --check-only --diff {[tox]pylogbeat_modules}
+    {envbindir}/pylint --rcfile=setup.cfg {[tox]pylogbeat_modules}
