improbable-eng/perforce-buildkite-plugin/action

--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,11 @@
-.DS_Store
-.AppleDouble
-.LSOverride
-
 __pycache__/
 *.py[cod]
 
-.Python
-env/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-*.egg-info/
-.installed.cfg
-*.egg
+.buildkite/plugins
+.vscode
+.pytest_cache
+.dev-venv
+.perforce-plugin-venv*
 
-docs/_*
-htmlcov/
-.tox/
-.coverage
-.cache
-nosetests.xml
-coverage.xml
-*.sqlite3
+local-pipeline
+python/fixture/server
