jwodder/wheel-filename/action

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,26 +1,25 @@
+[aliases]
+make = sdist bdist_wheel
+
 [metadata]
-name = permutation
-version = attr:permutation.__version__
-description = Permutations of finitely many positive integers
+name = wheel-filename
+version = attr:wheel_filename.__version__
+description = Parse wheel filenames
 long_description = file:README.rst
 long_description_content_type = text/x-rst
 author = John Thorvald Wodder II
-author_email = permutation@varonathe.org
+author_email = wheel-filename@varonathe.org
 license = MIT
 license_files = LICENSE
-url = https://github.com/jwodder/permutation
+url = https://github.com/jwodder/wheel-filename
 
 keywords =
-    permutation
-    math
-    maths
-    mathematics
-    symmetric group
-    group theory
+    filename
+    pep427
+    wheel
 
 classifiers =
-    Development Status :: 4 - Beta
-    #Development Status :: 5 - Production/Stable
+    Development Status :: 5 - Production/Stable
     Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.6
@@ -30,24 +29,19 @@ classifiers =
     Programming Language :: Python :: Implementation :: CPython
     Programming Language :: Python :: Implementation :: PyPy
     License :: OSI Approved :: MIT License
-    Intended Audience :: Developers
-    Topic :: Scientific/Engineering :: Mathematics
+    Topic :: System :: Software Distribution
     Typing :: Typed
 
 project_urls =
-    Source Code = https://github.com/jwodder/permutation
-    Bug Tracker = https://github.com/jwodder/permutation/issues
-    Documentation = https://permutation.readthedocs.io
+    Source Code = https://github.com/jwodder/wheel-filename
+    Bug Tracker = https://github.com/jwodder/wheel-filename/issues
+    Say Thanks! = https://saythanks.io/to/jwodder
 
 [options]
 packages = find:
-package_dir =
-    =src
 include_package_data = True
-python_requires = ~=3.6
-
-[options.packages.find]
-where = src
+python_requires = ~= 3.6
+install_requires =
 
 [mypy]
 ignore_missing_imports = True
@@ -60,6 +54,5 @@ warn_unreachable = True
 local_partial_types = True
 no_implicit_reexport = True
 strict_equality = True
-show_error_codes = True
+no_error_summary = True
 show_traceback = True
-pretty = True
