--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,4 @@
-include CHANGELOG.* CONTRIBUTORS.* LICENSE tox.ini
-graft src
+include CHANGELOG.* CONTRIBUTORS.* LICENSE tox.ini wheel_filename/py.typed
 graft docs
 prune docs/_build
 graft test
