--- a/tox.ini
+++ b/tox.ini
@@ -1,56 +1,46 @@
 [tox]
 envlist = typing,py36,py37,py38,py39,pypy3
 skip_missing_interpreters = True
-isolated_build = True
-minversion = 3.3.0
 
 [testenv]
+usedevelop = True
 deps =
-    coverage~=5.0
     flake8~=3.7
     flake8-bugbear
     flake8-builtins~=1.4
     flake8-import-order-jwodder
     pytest~=6.0
+    pytest-cov~=2.0
 commands =
-    flake8 --config=tox.ini src test
-    coverage erase
-    coverage run -m pytest {posargs} --doctest-modules --pyargs permutation
-    coverage run -m pytest {posargs} test README.rst docs/index.rst
-    coverage combine
-    coverage report
+    flake8 wheel_filename test
+    pytest {posargs} test README.rst
 
 [testenv:typing]
 deps =
     mypy~=0.570
 commands =
-    mypy src
+    mypy wheel_filename
 
 [pytest]
+addopts = --cov=wheel_filename --no-cov-on-fail --doctest-modules
 filterwarnings = error
+norecursedirs = test/data
 
 [coverage:run]
 branch = True
-parallel = True
-source = permutation
-
-[coverage:paths]
-source =
-    src
-    .tox/*/site-packages
 
 [coverage:report]
 precision = 2
 show_missing = True
 
 [flake8]
-application-import-names = permutation
+application-import-names = wheel_filename
 doctests = True
-exclude = .*/,build/,dist/,venv/
+exclude = .*/,build/,dist/,test/data,venv/
 hang-closing = False
 import-order-style = jwodder
-max-doc-length = 125
-max-line-length = 125
+max-doc-length = 80
+max-line-length = 80
 select = C,B,B902,B950,E,E242,F,I,W
 
 ignore =
@@ -64,12 +54,3 @@ ignore =
     E721,
     I201,
     W503,
-
-per-file-ignores =
-    test/*.py:B950,E201
-
-[testenv:docs]
-basepython = python3
-deps = -rdocs/requirements.txt
-changedir = docs
-commands = sphinx-build -E -W -b html . _build/html
