beatonma/django-wm/action

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,5 @@
-*.egg
-*.egg-info/
-*.pyc
-.cache/
-.coverage
-.eggs/
-.mypy_cache/
-.nox/
-.pytest_cache/
-.tox/
-__pycache__/
-build/
+.idea/
 dist/
-docs/.doctrees/
-docs/_build/
-venv/
+env/
+*.egg-info/
+**/*/__pycache__/
