--- a/tox.ini
+++ b/tox.ini
@@ -18,3 +18,18 @@
 # LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
+
+[tox]
+envlist = py37,py38,py39,py310
+
+[testenv]
+deps = pytest-mock
+       pytest-cov
+       pytest-black
+       pytest-pylint
+commands = pytest {posargs} --black --pylint \
+                            --cov=kasserver --cov-branch \
+                            --cov-report=term-missing --cov-fail-under=100
+
+[run]
+omit = .tox/*
