--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,27 +1,56 @@
-on: [push, pull_request]
+name: check
+on:
+  push:
+  pull_request:
 
 jobs:
-  build:
+  test:
+    name: Test with Python ${{ matrix.py }}
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        py:
+          - "3.10"
+          - "3.9"
+          - "3.8"
+          - "3.7"
     steps:
-
-      - name: Checkout repository and submodules
-        uses: actions/checkout@v2
-        with:
-          submodules: recursive
-
-      - name: setup python
+      - name: Setup python for test ${{ matrix.py }}
         uses: actions/setup-python@v2
         with:
-          python-version: '3.9'
+          python-version: ${{ matrix.py }}
+      - uses: actions/checkout@v2
+      - name: Install tox-gh
+        run: python -m pip install tox-gh
+      - name: Setup test suite
+        run: tox
+      - if: ${{ matrix.py == '3.10' }}
+        name: Generate coverage data
+        run: .tox/py310/bin/coverage lcov -o coverage/lcov.info
+      - if: ${{ matrix.py == '3.10' }}
+        name: Coveralls
+        uses: coverallsapp/github-action@main
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: install python packages
-        run: |
-          sudo apt-get update
-          sudo apt-get -y install python3-pip jshon jq virtualenv pkg-config openssl libssl-dev autoconf libtool libsecp256k1-dev
-          pip install virtualenv --upgrade
-          pip install -r requirements.txt
-          pip install -r requirements-dev.txt
-
-      - name: execute tests
-        run: ./test.sh && codecov
+  publish:
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+    needs: [test]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup python to build package
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.9"
+      - name: Install build
+        run: python -m pip install build
+      - uses: actions/checkout@v2
+      - name: Build sdist and wheel
+        run: python -m build -s -w . -o dist
+      - name: Publish to PyPi
+        uses: pypa/gh-action-pypi-publish@main
+        with:
+          skip_existing: true
+          user: ${{ secrets.pypi_user }}
+          password: ${{ secrets.pypi_password }}
