--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,24 @@
-web3 == 3.16.4
-eth-abi == 0.5.0
-eth-utils == 0.7.1
-eth-testrpc == 1.3.0
-eth-keys == 0.1.0b3
-pytz == 2017.3
-rlp == 0.6.0
-requests == 2.18.4
-numpy == 1.14.0
-matplotlib == 2.1.0
-texttable == 1.2.1
-python-dateutil == 2.6.1
-filelock == 3.0.0
-appdirs
+# kasserver - Manage domains hosted on All-Inkl.com through the KAS server API
+# Copyright (c) 2018 Christian Fetzer
+#
+# Permission is hereby granted, free of charge, to any person obtaining a copy
+# of this software and associated documentation files (the "Software"), to deal
+# in the Software without restriction, including without limitation the rights
+# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+# copies of the Software, and to permit persons to whom the Software is
+# furnished to do so, subject to the following conditions:
+#
+# The above copyright notice and this permission notice shall be included in
+# all copies or substantial portions of the Software.
+#
+# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+# SOFTWARE.
 
+click
+pbr
+zeep
