--- a/setup.cfg
+++ b/setup.cfg
@@ -18,3 +18,30 @@
 # LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
+
+[metadata]
+name = kasserver
+author = Christian Fetzer
+author-email = fetzer.ch@gmail.com
+description-file = README.rst
+url = https://github.com/fetzerch/kasserver
+license = MIT
+classifier =
+    Development Status :: 4 - Beta
+    Environment :: Console
+    Intended Audience :: System Administrators
+    License :: OSI Approved :: MIT License
+    Natural Language :: English
+    Operating System :: POSIX
+    Programming Language :: Python
+    Topic :: System :: Systems Administration
+
+[files]
+packages = kasserver
+package-data = kasserver = KasApi.wsdl
+
+[entry_points]
+console_scripts =
+    kasserver-dns = kasserver.kasserver_dns:cli
+    kasserver-dns-certbot = kasserver.kasserver_dns_certbot:cli
+    kasserver-dns-lego = kasserver.kasserver_dns_lego:cli
