adbar/courlan/action

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,4 @@
-include README.rst LICENSE requirements.txt
-recursive-include modoboa_sievefilters *.html *.js *.css *.png *.po *.mo
-recursive-include doc *
+include CONTRIBUTING.md HISTORY.md README.rst LICENSE tox.ini
+include tests/unit_tests.py
+include courlan_harns-march.jpg
+graft helpers/
