libfuse/pyfuse3/action

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,12 @@
-include pyproject.toml
-include *.md
-include LICENSE.txt
-include setup.py
+include Changes.rst
+include LICENSE
+graft doc/html
+graft Include
+graft examples
+graft rst
+graft util
+graft test
+prune test/.cache
+exclude MANIFEST.in
+recursive-include src *.pyx *.pyi *.py *.pxi *.pxd *.c *.h
+global-exclude *.pyc
